--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,28 +8,54 @@ layout: base
   <div class="row">
     <div class="{% if page.full-width %} col {% else %} col-xl-8 offset-xl-2 col-lg-10 offset-lg-1 {% endif %}">
 
+
+
       {% if page.gh-repo %}
         {% assign gh_split =  page.gh-repo | split:'/'  %}
         {% assign gh_user =  gh_split[0]  %}
         {% assign gh_repo =  gh_split[1]  %}
 
-<!--        <div id="header-gh-btns">-->
-<!--          {% if page.gh-badge.size > 0 %}-->
-<!--            {% for badge in page.gh-badge %}-->
-<!--              {% case badge %}-->
-<!--                {% when 'star'%}-->
-<!--                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=star&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>-->
-<!--                {% when 'watch'%}-->
-<!--                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=watch&v=2&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>-->
-<!--                {% when 'fork'%}-->
-<!--                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=fork&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>-->
-<!--                {% when 'follow'%}-->
-<!--                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&type=follow&count=true" frameborder="0" scrolling="0" width="220px" height="20px"></iframe>-->
-<!--              {% endcase %}-->
-<!--            {% endfor %}-->
-<!--          {% endif %}-->
-<!--        </div>-->
+        <div id="header-gh-btns">
+          {% if page.gh-badge.size > 0 %}
+            {% for badge in page.gh-badge %}
+              {% case badge %}
+                {% when 'star'%}
+                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=star&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
+                {% when 'watch'%}
+                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=watch&v=2&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
+                {% when 'fork'%}
+                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=fork&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
+                {% when 'follow'%}
+                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&type=follow&count=true" frameborder="0" scrolling="0" width="220px" height="20px"></iframe>
+              {% endcase %}
+            {% endfor %}
+          {% endif %}
+        </div>
 
+      {% endif %}
+
+        {% if page.lang %}
+        <div class="lang">
+        <!--         Define a ruby variable-->
+        {% if page.lang == 'eng' %}
+            {%assign curr_page= '/eng_posts' | append: page.url %}
+        {% else %}
+            {%assign curr_page= page.url%}
+        {% endif %}
+        {% assign curr_dir = '/' | append: page.lang | append: '_posts' %}
+
+        {% for lang in page.languages %}
+            {% if lang != page.lang %}
+                {% if lang == 'eng' %}
+                    <a id="eng_link" href="{{ curr_page | replace:  curr_dir, '' }}">🇬🇧 English Version&nbsp&nbsp</a>
+                {% elsif lang == 'ita' %}
+                    <a id="ita_link" href="/{{ curr_page | replace: curr_dir, 'ita_posts' }}">🇮🇹 Versione Italiana&nbsp&nbsp</a>
+                {% elsif lang == 'fra' %}
+                    <a id="fra_link" href="/{{ curr_page | replace: curr_dir, 'fra_posts' }}">🇫🇷 Version Française&nbsp&nbsp</a>
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+        </div>
       {% endif %}
 
       {% if page.before-content %}
